# sfc.ext

./: .clang-format  .gitignore  CMakeLists.txt  sfc.natvis
cmake/: config.cmake  cuda.cmake  fftw-config.cmake
src/: CMakeLists.txt
src/sfc/: cuda.h  math.h
src/sfc/cuda/: CMakeLists.txt  buffer.cc  buffer.h  device.cc  device.cxx  device.h  error.cc  error.h  exec.cc  exec.h  fft.cc  fft.cxx  fft.h  library.cc  library.h  memory.cc  memory.cxx  memory.h  mod.cc  mod.h  mod.inl  module.cc  module.h  stream.cc  stream.h  test.cxx  tex.h  texture.cc  texture.h
src/sfc/fft/: CMakeLists.txt  cufft.cc  cufft.h  fftw.cc  fftw.h
src/sfc/math/: CMakeLists.txt  alloc.cc  alloc.h  complex.cxx  complex.h  fft.cc  fft.cxx  fft.h  fftw.cc  fftw.cxx  geo.cxx  geo.h  mod.h  ndarray.cc  ndarray.cxx  ndarray.h  ndslice.cxx  ndslice.h  ndview.h  rawbuf.cc  rawbuf.h  sampler.cxx  sampler.h  vec.cxx  vec.h
src/sfc/math/detail/: fft.inl
test/: CMakeLists.txt
test/cuda/: CMakeLists.txt  device.cxx  fft.cxx
test/fft/: CMakeLists.txt  cufft.cxx  fftw.cxx
test/math/: CMakeLists.txt  fft.cxx  ndslice.cxx  sampler.cxx
