if (NOT APPLE)
  find_package(CUDAToolkit REQUIRED)
endif()
find_package(FFTW REQUIRED)

add_library(sfc_fft)
add_library(sfc::fft ALIAS sfc_fft)
target_source_path(sfc_fft .)
target_compile_options(sfc_fft PRIVATE ${_SFC_EXT_OPTIONS})
target_include_directories(sfc_fft PUBLIC ${_SFC_EXT_INCLUDE})
target_link_libraries(sfc_fft PUBLIC sfc_cuda FFTW::fftw3f CUDA::cufft)
